secondfile/objects/Circuit_and_VLAN_Details__c.object
<CustomObject>
    <fields>
        <fullName>AAID_Auto__c</fullName>
        <description>Premise Details-Premise Data-Circuit and VLAN Details-AAID</description>
        <displayFormat>E{0000000000}</displayFormat>
        <label>AAID Auto</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>AAID__c</fullName>
        <formula>IF(Premise__r.Transport_Type__c = &apos;SwitchedEthernet&apos;||Premise__r.Transport_Type__c = &apos;DedicatedEthernet&apos;,AAID_Auto__c,&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AAID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ATT_POP_CLLI__c</fullName>
        <description>Premise Details-Premise Data-Circuit and VLAN Details-POP CLLI-ATT POP CLLI</description>
        <label>ATT POP CLLI</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccessPortConfiguration__c</fullName>
        <label>AccessPortConfiguration</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PortBased</fullName>
                </value>
                <value>
                    <fullName>VLANBased</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Access_Method__c</fullName>
        <description>Premise Details-Premise Data-Circuit And VLAN Details-Access Method Data-Access Method</description>
        <label>Access Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Access_Provider_Abbreviation__c</fullName>
        <description>Premise Details-Premise Data-Circuit and VLAN Details-Access Provider Abbreviation</description>
        <label>Access Provider Abbreviation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Access_Provider_Name__c</fullName>
        <description>Premise Details-Premise Data-Circuit and VLAN Details-Access Provider Name</description>
        <label>Access Provider Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Access_Provider_Number__c</fullName>
        <description>Premise Details-Premise Data-Circuit and VLAN Details-Access Provider Number</description>
        <label>Access Provider Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Access_Provider_Product_Name__c</fullName>
        <description>Premise Details-Premise Data-Circuit and VLAN Details-Access Provider Product Name</description>
        <label>Access Provider Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Access_Speed__c</fullName>
        <description>Premise Details-Premise Data-Circuit and VLAN Details-Access Speed</description>
        <label>Access Speed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Action_Details__c</fullName>
        <label>Action Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Aggregate_Billing_Indicator__c</fullName>
        <description>Premise Details-Premise Data-Circuit and VLAN Details-UB Billing-Aggregate Billing Options-Aggregate Billing Indicator</description>
        <label>Aggregate Billing Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Aggregate_Product_Package_Code__c</fullName>
        <description>Premise Details-Premise Data-Circuit and VLAN Details-UB Billing-Aggregate Billing Options- Product Package Code</description>
        <label>Aggregate Product Package Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Aggregate_Recurring_Charge_Discount__c</fullName>
        <description>Premise Details-Premise Data-Circuit and VLAN Details-UB Billing-Aggregate Billing Options-Recurring Charge Discount</description>
        <label>Aggregate Recurring Charge Discount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Aggregate_Usage_Discount__c</fullName>
        <description>Premise Details-Premise Data-Circuit and VLAN Details-UB Billing-Aggregate Billing Options-Usage Discount</description>
        <label>Aggregate Usage Discount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Arrangement_Code__c</fullName>
        <description>Premise Details-Premise Data-Circuit and VLAN Details-Arrangement Code</description>
        <label>Arrangement Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Arrangement_Name__c</fullName>
        <description>Premise Details-Premise Data-Circuit and VLAN Details-SDO Arrangement Data-Arrangement Name</description>
        <label>Arrangement Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Building__c</fullName>
        <description>Premise Details-Premise Data-Circuit and VLAN Details-Circuit Location-Building</description>
        <label>Building</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Burstable_Billing_Indicator__c</fullName>
        <description>Premise Details-Premise Data-Circuit And VLAN Details-UB Billing-Burstable Billing Option-Burstable Billing Indicator</description>
        <label>Burstable Billing Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Burstable_Product_Package_code__c</fullName>
        <description>Premise Details-Premise Data-Circuit And VLAN Details-UB Billing-Burstable Billing Option-Product Package code</description>
        <label>Burstable Product Package code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Burstable_Recurring_Charge_Discount__c</fullName>
        <description>Premise Details-Premise Data-Circuit And VLAN Details-UB Billing-Burstable Billing Option-Recurring Charge Discount</description>
        <label>Burstable Recurring Charge Discount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Burstable_Usage_Discount__c</fullName>
        <description>Premise Details-Premise Data-Circuit And VLAN Details-UB Billing-Burstable Billing Option-Usage Discount</description>
        <label>Burstable Usage Discount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COS_ClassName__c</fullName>
        <description>Premise Details-Premise Data-Circuit and VLAN Details-Egress COS Class Option-COS ClassName</description>
        <label>COS ClassName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COS_Class_Name__c</fullName>
        <description>Premise Details-Premise Data-Circuit and VLAN Details-Ingress COS Class Option-COS Class Name</description>
        <label>COS Class Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COS_Policing__c</fullName>
        <description>Premise Details-Premise Data-Circuit and VLAN Details-Ingress COS Class Option-COS Policing</description>
        <label>COS Policing</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COS_Queing__c</fullName>
        <description>Premise Details-Premise Data-Circuit and VLAN Details-Egress COS Class Option-COS Queing</description>
        <label>COS Queing</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COS_Shaping__c</fullName>
        <description>Premise Details-Premise Data-Circuit and VLAN Details-Egress COS Class Option-COS Shaping</description>
        <label>COS Shaping</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CVLAN_Opportunity_Id__c</fullName>
        <formula>Premise__r.OpptyID__c</formula>
        <label>CVLAN Opportunity Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CVLAN_Premise_Number__c</fullName>
        <description>Technical Field to capture Premise Number of Related Premise</description>
        <formula>Premise__r.Premise_Number__c</formula>
        <label>CVLAN Premise Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class_of_Service_Package__c</fullName>
        <description>Premise Details-Premise Data-Circuit and VLAN Details-Class of Service Package</description>
        <label>Class of Service Package</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contracted_Port_Speed__c</fullName>
        <description>Premise Details-Premise Data-Circuit and VLAN Details-Contracted Port Speed</description>
        <label>Contracted Port Speed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Version_on_Premise__c</fullName>
        <description>Technical field not required on page layout</description>
        <formula>Premise__r.Current_Version__c</formula>
        <label>Current Version on Premise</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Managed_Fire_Wall_Model__c</fullName>
        <description>Premise Details-Premise Data-Circuit and VLAN Details-Customer Managed Fire Wall Model</description>
        <label>Customer Managed Fire Wall Model</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Prem_CLLI__c</fullName>
        <description>Premise Details-Premise Data-Circuit and VLAN Details-POP CLLI-Customer Prem CLLI</description>
        <label>Customer Prem CLLI</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Usage_Reports_Indicator__c</fullName>
        <description>Premise Details-Premise Data-Circuit and VLAN Details-Customer Usage Reports Indicator</description>
        <label>Customer Usage Reports Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Domain_Name__c</fullName>
        <description>Premise Details-Premise Data-Circuit and VLAN Details-Domain-Domain Name</description>
        <label>Domain Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ES__c</fullName>
        <label>Engress Scheduler</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ETHToken__c</fullName>
        <label>ETHToken</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Egress_COS_Profile_ID__c</fullName>
        <description>Premise Details-Premise Data-Circuit and VLAN Details-Egress COS Profile ID</description>
        <label>Egress COS Profile ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Premise_ID__c</fullName>
        <description>Premise Details-Premise Data-Circuit and VLAN Details-MAROARRBNR-External Premise ID</description>
        <label>External Premise ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facility_Interface_Code__c</fullName>
        <description>Premise Details-Premise Data-Circuit and VLAN Details-Facility Interface Code</description>
        <label>Facility Interface Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Floor__c</fullName>
        <description>Premise Details-Premise Data-Circuit and VLAN Details-Circuit Location-Floor</description>
        <label>Floor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hi_Cap_Flex_Minimum_Bandwidth_Commitment__c</fullName>
        <description>Premise Details-Premise Data-Circuit and VLAN Details-UB Billing- Hi CAP Flex Billing Option-Minimum Bandwidth Commitment</description>
        <label>Hi Cap Flex Minimum Bandwidth Commitment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hi_Cap_Flex_Product_Package_Code__c</fullName>
        <description>Premise Details-Premise Data-Circuit and VLAN Details-UB Billing- Hi CAP Flex Billing Option-Product Package Code</description>
        <label>Hi Cap Flex Product Package Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hi_Cap_Flex_Recurring_Charge_Discount__c</fullName>
        <description>Premise Details-Premise Data-Circuit and VLAN Details-UB Billing- Hi CAP Flex Billing Option-Recurring Charge Discount</description>
        <label>Hi Cap Flex Recurring Charge Discount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hi_Cap_Flex_Usage_Discount__c</fullName>
        <description>Premise Details-Premise Data-Circuit and VLAN Details-UB Billing- Hi CAP Flex Billing Option-Usage Discount</description>
        <label>Hi Cap Flex Usage Discount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IP_Version__c</fullName>
        <label>IP Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPv4_Exception__c</fullName>
        <label>IPv4 Exception</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ingress_COS_Profile_ID__c</fullName>
        <description>Premise Details-Premise Data-Circuit and VLAN Details-Ingress COS Profile ID</description>
        <label>Ingress COS Profile ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interconnect_Technology__c</fullName>
        <description>Premise Details-Premise Data-Circuit And VLAN Details-Access Method Data-Interconnect Technology</description>
        <label>Interconnect Technology</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InterfaceType_alpha__c</fullName>
        <formula>RIGHT(Interface_Type__c,LEN(Interface_Type__c) - LEN(LEFT( Interface_Type__c , FIND(&quot;Base&quot;, Interface_Type__c)-1))  )</formula>
        <label>InterfaceType_alpha</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InterfaceType_numeric__c</fullName>
        <formula>TRIM(LEFT( Interface_Type__c , FIND(&quot;Base&quot;, Interface_Type__c)-1))</formula>
        <label>InterfaceType_numeric</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interface_Type__c</fullName>
        <description>Premise Details-Premise Data-Circuit and VLAN Details-Interface Type</description>
        <label>Interface Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jack_Type__c</fullName>
        <label>Jack Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Layer_Two_Control_Protocol__c</fullName>
        <description>Premise Details-Premise Data-Circuit and VLAN Details-Layer Two Control Protocol</description>
        <label>Layer Two Control Protocol</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MACD_Type__c</fullName>
        <description>This is a technical field to capture MACD type for which the record has been created. Not required on page layout.</description>
        <label>MACD Type</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MACD_Version__c</fullName>
        <description>Technical field to determine for which Premise version the record was cloned. Not required on Page layout.</description>
        <formula>Premise__r.RDS_Version__c</formula>
        <label>MACD Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mac_Limit__c</fullName>
        <label>Mac Limit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maro_Type__c</fullName>
        <description>Premise Details-Premise Data-Circuit and VLAN Details-MAROARRBNR-Maro Type</description>
        <label>Maro Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master_CVLAN_Id__c</fullName>
        <description>Id of record from which this CVLAN record was cloned. Technical field, not required on page layout.</description>
        <label>Master CVLAN Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Circuits__c</fullName>
        <description>Cast Iron will populate it with the count of Circuits IDs it creates for the premise</description>
        <label>Number of Circuits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Onsite_Hardware_Maintenance_Type__c</fullName>
        <description>Premise Details-Premise Data-Circuit and VLAN Details-Onsite Hardware Maintenance Type</description>
        <label>Onsite Hardware Maintenance Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Option__c</fullName>
        <description>Premise Details-Premise Data-Circuit and VLAN Details-SDO Arrangement Data-Option</description>
        <label>Option</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAA_Code__c</fullName>
        <description>Premise Details-Premise Data-Circuit and VLAN Details-PAA Code</description>
        <label>PAA Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PL_Contracted_Port_Speed__c</fullName>
        <description>Premise Details-Premise Data-Circuit and VLAN Details-PL Contracted Port Speed</description>
        <label>PL Contracted Port Speed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROF_E__c</fullName>
        <label>PROF-E</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Port_Configuration__c</fullName>
        <description>Premise Details-Premise Data-Circuit and VLAN Details-Port Configuration</description>
        <label>Port Configuration</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Port_Interface__c</fullName>
        <description>Premise Details-Premise Data-Circuit and VLAN Details-Port Interface</description>
        <label>Port Interface</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Premise_Number__c</fullName>
        <label>Premise Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Premise__c</fullName>
        <label>Premise</label>
        <referenceTo>RDS_Premise_Details__c</referenceTo>
        <relationshipName>Circuit_and_VLAN_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Primary_Indicator__c</fullName>
        <description>Premise Details-Premise Data-Circuit and VLAN Details-MAROARRBNR-Primary Indicator</description>
        <label>Primary Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority_Bit__c</fullName>
        <description>Premise Details-Premise Data-Circuit and VLAN Details-Priority Bit</description>
        <label>Priority Bit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provising_Access_Arrangement_Code__c</fullName>
        <description>Premise Details-Premise Data-Circuit and VLAN Details-Provising Access Arrangement Code</description>
        <label>Provising Access Arrangement Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Purchase_Order_Number__c</fullName>
        <description>Premise Details-Premise Data-Circuit and VLAN Details-Related Purchase Order Number</description>
        <label>Related Purchase Order Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Required_L3_POP_CLLI__c</fullName>
        <description>Premise Details-Premise Data-Circuit and VLAN Details-POP CLLI-Required L3 POP CLLI</description>
        <label>Required L3 POP CLLI</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Room__c</fullName>
        <description>Premise Details-Premise Data-Circuit and VLAN Details-Circuit Location-Room</description>
        <label>Room</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDO_Arrangement_Data_Option__c</fullName>
        <label>SDO Arrangement Data Option</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDO_Arrangement_Name__c</fullName>
        <description>Premise Details-Premise Data-Circuit and VLAN Details-SDO Arrangement Name</description>
        <label>SDO Arrangement Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SWC_CLLI__c</fullName>
        <description>Premise Details-Premise Data-Circuit and VLAN Details-POP CLLI-SWC CLLI</description>
        <label>SWC CLLI</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scrambling_Indicator__c</fullName>
        <description>Premise Details-Premise Data-Circuit and VLAN Details-Scrambling Indicator</description>
        <label>Scrambling Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Code_Modifier__c</fullName>
        <formula>IF( Premise__r.Service_Type__c = &apos;ASE&apos; || Premise__r.Service_Type__c = &apos;AVPN&apos; || Premise__r.Service_Type__c = &apos;MIS&apos;,&apos;EC&apos;, &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Code Modifier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Code__c</fullName>
        <description>Premise Details-Premise Data-Circuit and VLAN Details-Service Code</description>
        <label>Service Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Type__c</fullName>
        <formula>Premise__r.Service_Type__c</formula>
        <label>Service Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Serving_Arrangement__c</fullName>
        <label>Serving Arrangement</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_interface__c</fullName>
        <formula>IF(AND(OR(Interface_Type__c = &quot;100BaseTX&quot;,Interface_Type__c =&quot;1003&quot;), Premise__r.Transport_Type__c =&quot;SwitchedEthernet&quot;) ,
&quot;Electrical - 100 Base TX&quot; , 
    IF(AND(OR(Interface_Type__c = &quot;1000BaseLX&quot;,Interface_Type__c=&quot;1009&quot;), Premise__r.Transport_Type__c =&quot;SwitchedEthernet&quot;) ,
    &quot;Optical Single Mode - 1000 Base LX&quot; ,
         IF(AND(OR(Interface_Type__c = &quot;1000BaseSX&quot;,Interface_Type__c =&quot;1010&quot;) , Premise__r.Transport_Type__c =&quot;SwitchedEthernet&quot;) ,
         &quot;Optical Multi Mode - 1000 Base SX&quot; ,
               IF(AND(Premise__r.Transport_Type__c = &quot;SwitchedEthernet&quot;, Interface_Type__c != null),
               Interface_Type__c ,
                  &quot;None&quot;
               )
          )
    )
)</formula>
        <label>Site interface</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscribed_Services__c</fullName>
        <description>Premise Details-Premise Data-Circuit and VLAN Details-Subscribed Services</description>
        <label>Subscribed Services</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Top_Level_Domain_Name__c</fullName>
        <description>Premise Details-Premise Data-Circuit and VLAN Details-Domain-Top Level Domain Name</description>
        <label>Top Level Domain Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transport_Type__c</fullName>
        <formula>Premise__r.Transport_Type__c</formula>
        <label>Transport Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tunnel__c</fullName>
        <description>Premise Details-Premise Data-Circuit and VLAN Details-Tunnel</description>
        <label>Tunnel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unilink_Indicator__c</fullName>
        <description>Premise Details-Premise Data-Circuit and VLAN Details-Unilink Indicator</description>
        <label>Unilink Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VLAN_Tag_Control__c</fullName>
        <description>Premise Details-Premise Data-Circuit and VLAN Details-VLAN Tag Control</description>
        <label>VLAN Tag Control</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VPN_Connection_Type_CVLAN__c</fullName>
        <label>VPN Connection Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VPN_Name_CVLAN__c</fullName>
        <label>VPN Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VPN_SalesForce_Dot_Com_ID_CVLAN__c</fullName>
        <formula>IF(
NOT(ISBLANK(Premise__r.DealHash__r.SFDC_Account_End_Customer_Override__c)), Premise__r.DealHash__r.SFDC_Account_End_Customer_Override__c,
IF(
AND(NOT(ISBLANK(VPN_Name_CVLAN__c)),OR(Premise__r.Transport_Type__c = &quot;T1&quot;,Premise__r.Transport_Type__c = &quot;nT1&quot;)), Premise__r.DealHash__r.SFDC_Account_End_Customer_ID_AEJ_ID__c, NULL))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>VPN SalesForce Dot Com ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>e2eVPNkey__c</fullName>
        <label>e2eVPNkey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>RDS-Circuit and VLAN Details</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Class_of_Service_Package__c</columns>
        <columns>Access_Speed__c</columns>
        <columns>ATT_POP_CLLI__c</columns>
        <columns>SWC_CLLI__c</columns>
        <columns>VPN_Name_CVLAN__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Class_of_Service_Package__c</field>
            <operation>notContain</operation>
            <value>No_</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CV - {000000}</displayFormat>
        <label>RDS-Circuit and VLAN Details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RDS-Circuit and VLAN Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>RDS_Edit_Expired_Lapsed</fullName>
        <active>true</active>
        <description>RDS Edit Expired Lapsed</description>
        <errorConditionFormula>AND(OR(If(Premise__r.DealHash__r.Edit_Expired_Date__c&lt;NOW(),true,false),ISPICKVAL( Premise__r.DealHash__r.RDS_object_status__c ,&quot;Review completed&quot;)),
$Profile.Name &lt;&gt;&quot;SI_EBM Technical Ops&quot;,
$Profile.Name &lt;&gt;&quot;SI_EBM Technical Ops SME&quot;,
$Profile.Name &lt;&gt;&quot;SI_EBM_DEV_OPS&quot;,
$Profile.Name &lt;&gt;&quot;SI_API User&quot;,
$Profile.Name&lt;&gt;&quot;ATT Partner Community User&quot;,
$Profile.Name &lt;&gt;&quot;System Administrator&quot;,
$Profile.Name &lt;&gt;&quot;SI_EBM Admin&quot;)</errorConditionFormula>
        <errorMessage>Edit Time has elapsed . Please contact EBM Admin .</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Record_Lock_after_Deal_Hash_creation_CVL</fullName>
        <active>true</active>
        <errorConditionFormula>Premise__r.DealHash__r.IsDealHashCreationSuccess__c  = true &amp;&amp; $Profile.Name &lt;&gt; &apos;System Administrator&apos; &amp;&amp; $Profile.Name &lt;&gt; &apos;SI_API User&apos; &amp;&amp; $Profile.Name &lt;&gt; &apos;SI_EBM_DEV_OPS&apos; &amp;&amp; $Profile.Name&lt;&gt;&quot;ATT Partner Community User&quot; &amp;&amp; $Profile.Name &lt;&gt; &apos;SI_EBM Admin&apos; &amp;&amp; NOT( ISNEW())</errorConditionFormula>
        <errorMessage>Record cannot be updated after Deal Hash has been created.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Restrict_Creation_for_Non_MACD_D_CVLAN</fullName>
        <active>true</active>
        <description>This validation rule will prevent creation of records for SI EBM Admin and EBM DEV OPs profile when the record is not of MACD Disconnect type</description>
        <errorConditionFormula>AND(MACD_Type__c &lt;&gt; &apos;D&apos;, MACD_Type__c &lt;&gt; &apos;C&apos;,
OR($Profile.Name = &apos;SI_EBM_DEV_OPS&apos;,$Profile.Name = &apos;SI_EBM Admin&apos;), 
ISNEW() )</errorConditionFormula>
        <errorMessage>You do not have permission to create a new RDS-Circuit and VLAN Details record.</errorMessage>
    </validationRules>
</CustomObject>